
  o Read Excel spreadsheet dialog asks about variable and row names (suggestion of Knut Krueger).

  o The linear-model and GLM dialogs now permit the selection of a weight variable (following a query by Bruce Dunham about fitting binomial -- as opposed to binary -- GLMs). New Rcmdr utility, variableComboBox(), to support these features.

  o Small changes/improvements.

Changes to Version 2.0-5

  o New Basque translation (courtesy of Jose Ramon Rueda).

Changes to Version 2.0-4

  o Updated Slovenian translation (with thanks to Jaro.Lajovic and Matjaz Jeran).

  o Fixed numSummary() so that it doesn't fail when there's an empty factor level (problem reported by Alan Mainwaring).

  o ActiveDataSet(NULL) now removes the active data set.

Changes to Version 2.0-3

  o Updated Polish translation (with thanks to Lukasz Daniel).

  o titleLabel() to format a label in title font and color; exported for plug-ins.

  o Added histograms by group (suggestion of Sarah Dawson).

  o Small interface improvements.

  o Fixed bug in French translation preventing loading R Markdown files (reported by J. Mazet).

Changes to Version 2.0-2

  o Moved knitr and markdown packages to Suggests: (suggestion of Dirk Eddelbuettel).

  o Updated Japanese translation of Getting Started manual (by Takaharu Araki).

  o Added editing buttons with tooltips to Rcmdr editor.

  o Added Mac OS X command-key combinations.

  o Tweaks to ttk theme and font handling (with help of Philippe Grosjean and the tcltk2 package).

  o Small bug fixes.

Changes to Version 2.0-1

  o Caching of variable names, factor names, etc., to improve menu refreshes in large data sets (in response to observation of Yoshinobu Kanda).

  o Updated translations (with thanks to the translators): French (Milan Bouchet-Valat), Japanese (Takaharu Araki).

  o Most errors now removed from R Markdown and knitr documents.
